--- a/kapacitor/1.5/kapacitor.conf
+++ b/kapacitor/1.5/kapacitor.conf
@@ -5,3 +5,9 @@ data_dir = "/var/lib/kapacitor"
 
 [storage]
   boltdb = "/var/lib/kapacitor/kapacitor.db"
+
+[udf]
+[udf.functions]
+  [udf.functions.agent]
+    timeout = "10s"
+    socket = "/tmp/agent.sock"
